@@ -78,7 +78,7 @@
         <jetty.version>6.1.26</jetty.version>
         <jersey.version>1.9</jersey.version>
         <tinkerpop.version>2.5.0</tinkerpop.version>
-        <titan.version>0.5.3</titan.version>
+        <titan.version>0.5.4</titan.version>
         <hadoop.version>2.6.0</hadoop.version>
 
         <!-- scala versions -->
@@ -655,7 +655,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.16</version>
+                    <version>2.18.1</version>
                 </plugin>
 
                 <plugin>
@@ -800,12 +800,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.16</version>
+                <version>2.18.1</version>
                 <configuration>
                     <!--<skipTests>true</skipTests>-->
                     <forkMode>always</forkMode>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <groups></groups>
+                    <argLine>-Djava.awt.headless=true</argLine>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -824,16 +824,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.16</version>
+                <version>2.18.1</version>
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <argLine>-Dproject.version=${project.version}
+                    <argLine>-Djava.awt.headless=true -Dproject.version=${project.version}
                         -Dhadoop.tmp.dir=${project.build.directory}/tmp-hadoop-${user.name}
+                        -Xmx1024m -XX:MaxPermSize=512m
                     </argLine>
                     <parallel>none</parallel>
                     <reuseForks>false</reuseForks>
                     <forkCount>1</forkCount>
-                    <threadCount>1</threadCount>
+                    <threadCount>5</threadCount>
                 </configuration>
                 <executions>
                     <execution>
